add style for a tag

--- a/pekoe/src/app/(pages)/menu/page.module.css
+++ b/pekoe/src/app/(pages)/menu/page.module.css
@@ -21,6 +21,11 @@
     border-radius: 8px;
     cursor: pointer;
 
+    > a {
+      width: 100%;
+      display: flex;
+    }
+
     &:first-child {
       margin: 0;
     }
