--- a/cup/src/pages/zero-one/styles.module.css
+++ b/cup/src/pages/zero-one/styles.module.css
@@ -5,15 +5,13 @@
 }
 
 .list {
+  margin: 0 auto;
+  padding: 48px 0 0;
   width: 80%;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -20%);
+  position: static;
   view-transition-name: menulist;
 
   .item {
-    margin: 24px 0 0;
     width: 100%;
     height: 200px;
     display: flex;
@@ -72,5 +70,41 @@
   .description {
     margin-top: 8px;
     font-size: 12px;
+  }
+}
+
+.games {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  .item {
+    margin: 32px 0 0;
+    width: calc(33% - 8px);
+    height: 200px;
+    border: 1px solid #fff;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      border: 1px solid #800;
+
+      .title {
+        color: #800;
+      }
+    }
+  }
+
+  .title {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 28px;
+    transition: 0.3s;
   }
 }
