--- a/cup/src/pages/zero-one/game/styles.module.css
+++ b/cup/src/pages/zero-one/game/styles.module.css
@@ -1,10 +1,130 @@
 .game {
+  padding: 48px;
   height: 100vh;
   background-color: #000;
   position: relative;
 }
 
+.informations {
+  display: flex;
+  justify-content: space-between;
+}
+
+.histories {
+  .history {
+    width: 15%;
+    min-width: 150px;
+    max-width: 240px;
+    border: 1px solid #fff;
+
+    .gameName {
+      padding: 8px;
+      color: #fff;
+      background-color: #800;
+      border-bottom: 1px solid #333;
+    }
+
+    .item {
+      display: flex;
+      color: #fff;
+      border-bottom: 1px solid #333;
+
+      &:last-child {
+        border: none;
+      }
+
+      .round {
+        padding: 8px;
+        width: 56px;
+        background-color: #800;
+      }
+
+      .score {
+        padding: 8px;
+      }
+    }
+  }
+}
+
+.marks {
+  margin: 48px 0 0;
+
+  .current {
+    font-size: 160px;
+    color: #fff;
+  }
+
+  .scores {
+    display: flex;
+    width: 100%;
+
+    .item {
+      width: 33.33%;
+      color: #fff;
+      font-size: 32px;
+      text-align: center;
+    }
+  }
+}
+
+.playersWrapper {
+  .players {
+    width: 15%;
+    min-width: 150px;
+    max-width: 240px;
+
+    .item {
+      color: #fff;
+      border: 1px solid #fff;
+      border-top: none;
+
+      &:first-child {
+        border-top: 1px solid #fff;
+      }
+
+      .name {
+        padding: 24px;
+        border-bottom: 1px solid #333;
+        text-align: center;
+      }
+
+      .score {
+        padding: 8px;
+        text-align: center;
+      }
+
+      &:nth-child(1) {
+        &.current {
+          background-color: #800;
+        }
+      }
+
+      &:nth-child(2) {
+        &.current {
+          background-color: #039;
+        }
+      }
+
+      &:nth-child(3) {
+        &.current {
+          background-color: #990;
+        }
+      }
+
+      &:nth-child(4) {
+        &.current {
+          background-color: #030;
+        }
+      }
+    }
+  }
+}
+
 .inputs {
+  position: fixed;
+  width: calc(100% - 96px);
+  bottom: 48px;
+
   .multiplier {
     width: 100%;
     display: flex;
